vlib/v/checker/tests/check_incompatible_struct.out
vlib/v/checker/tests/check_incompatible_struct.vv:13:17: error: struct `Foo` is not compatible with struct `Bar`
   11 |     foo := Foo{2}
   12 |     bar2 := Bar{...foo a: 1}
   13 |     bar3 := Bar{...foo b: 1}
      |                    ~~~
   14 |     bar4 := Bar{...foo b: 1 a: 2}
   15 |     bar := Bar{...foo}
